<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <POU Name="FB_SmoothAxis" Id="{2c576ec6-7433-4ec0-8547-ab9b5dd393c9}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_SmoothAxis
VAR_INPUT
	i_xHotPlug	:	BOOL;
END_VAR
VAR_OUTPUT
	q_asResult: ARRAY [1..20] OF STRING;
	q_xError	:	BOOL;
END_VAR
VAR_IN_OUT
	iq_Axis	:	ST_HOMSStepper;
END_VAR
VAR

	mcPower	:	MC_Power;
	mcReset	:	MC_Reset;
	mcMoveAbsolute : ARRAY[1..2] OF MC_MoveAbsolute;
	mcHalt	:	MC_Halt;
	mcSmoothMover	:	MC_SmoothMover;
	//Error Stuff
	indexResult: INT := 1;
	fbFormatString	:	FB_FormatString;
	
	xInitComplete	:	BOOL := FALSE;
	
	imcBlockIndex: INT;
	
	rtEnable : R_TRIG;
	ftEnable : F_TRIG;
	rtStop	:	R_TRIG;
	rtStart	:	R_TRIG;
	rReqAbsPosOld: REAL := 0;
	rReqAbsPosPrevious: REAL;
	iI: INT;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[(* Manipulator Axis Function Block
Alex Wallace, 2016-8-8 

This block works by jumping between two absolute move blocks and buffering
the motion between them.
*)


rtEnable(CLK:=iq_Axis.xEnable);
ftEnable(CLK:=iq_Axis.xEnable);

//Update status
iq_Axis.stAxis();

IF rtEnable.Q OR ftEnable.Q THEN
	xInitComplete := FALSE;
	iq_Axis.eState := Init;
ELSIF xInitComplete THEN
	iq_Axis.eState := MoveEnabled;
END_IF

//For EPICS, because the modbus map was made for 32 bit..
iq_Axis.rActPos := LREAL_TO_REAL(iq_Axis.stAxis.NcToPlc.ActPos);


CASE iq_Axis.eState OF
	0: iq_Axis.eState := Init;
	Init:
	(* Start by initializing the motor axis *)
	mcPower.Enable := iq_Axis.xEnable;
	iq_Axis.rReqAbsPos := iq_Axis.rActPos; //do this when the PLC comes up so we don't just lose the position if we tweak
	IF mcPower.Status THEN //success
		xInitComplete := TRUE;
		q_asResult[indexResult] := 'Motor init success';
		indexResult := indexResult + 1;
		iq_Axis.eState := MoveEnabled;
	ELSIF mcPower.Error THEN
		mcPower.Enable := FALSE;
		fbFormatString(sFormat:='Init mcPower Error: %s', arg1:=F_UDINT(mcPower.ErrorID));
		ActError();
	END_IF
		
	MoveEnabled:
		mcSmoothMover.Enable := iq_Axis.xEnable;
		mcSmoothMover.ReqAbsPos := LIMIT(-100, REAL_TO_LREAL(iq_Axis.rReqAbsolute), 100);
		mcSmoothMover.Execute := iq_Axis.xStart;
		(*We've already captured the rising edge of start (if there was one, so 
		go ahead and reset it.*)
		iq_Axis.xStart := FALSE;
		
		//Halt
		mcHalt.Execute S= iq_Axis.xStop;
		mcHalt.Execute R= mcHalt.Busy;
		iq_Axis.xStop R= mcHalt.Busy;
		IF mcPower.Error OR mcSmoothMover.Error THEN
			iq_Axis.eState:=Error;
		END_IF
		
	Error:
		mcReset.Execute := rtEnable.Q OR i_xHotPlug OR iq_Axis.xReset;
		IF mcReset.Done THEN
			q_xError := FALSE;
			mcReset.Execute := FALSE;
			iq_Axis.xReset := FALSE;
			iq_Axis.eState:=Init;
		END_IF
	
END_CASE


(* Run the mc blocks *)
ActPower();
mcReset(Axis:=iq_Axis.stAxis);
mcSmoothMover(Axis:=iq_Axis.stAxis,
	Velocity:=iq_Axis.fVelocity);
mcHalt(Axis:=iq_Axis.stAxis);

iq_Axis.bDone := mcHalt.Done OR mcSmoothMover.Done;
iq_Axis.bBusy := mcHalt.Busy OR mcSmoothMover.Busy;

//For display, this logic is not for safety
iq_Axis.xHiLS := NOT iq_Axis.xHiLS;
iq_Axis.xLoLS := NOT iq_Axis.xLoLS;]]></ST>
    </Implementation>
    <Action Name="ActError" Id="{efb14a67-3fcd-4d5f-a82f-60b8d6779b53}">
      <Implementation>
        <ST><![CDATA[(* Error action
*)

//Reset the debugging index
IF indexResult > 20 THEN indexResult := 1; END_IF

iq_Axis.eState := Error;
q_xError	:=	TRUE;
q_asResult[indexResult] := fbFormatString.sOut;
indexResult := indexResult +1;]]></ST>
      </Implementation>
    </Action>
    <Action Name="ActPower" Id="{31b74a81-1b68-4db8-b9a3-64793fff0f5a}">
      <Implementation>
        <NWL>
          <XmlArchive>
            <Data>
              <o xml:space="preserve" t="NWLImplementationObject">
                <v n="NetworkListComment">""</v>
                <v n="DefaultViewMode">"Fbd"</v>
                <l2 n="NetworkList" cet="Network">
                  <o>
                    <v n="ILActive">false</v>
                    <v n="FBDValid">false</v>
                    <v n="ILValid">false</v>
                    <l2 n="ILLines" />
                    <v n="Comment">""</v>
                    <v n="Title">""</v>
                    <v n="Label">""</v>
                    <v n="OutCommented">false</v>
                    <l2 n="NetworkItems" cet="BoxTreeAssign">
                      <o>
                        <o n="OutputItems" t="OutputItemList">
                          <l2 n="OutputItems" cet="Operand">
                            <o>
                              <v n="Operand">"iq_Axis.xEnabled"</v>
                              <v n="Type">"BOOL"</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">true</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">22L</v>
                            </o>
                          </l2>
                        </o>
                        <o n="Flags" t="Flags">
                          <v n="Flags">0</v>
                          <v n="Fixed">false</v>
                          <v n="Extensible">false</v>
                        </o>
                        <o n="RValue" t="BoxTreeBox">
                          <v n="BoxType">"MC_Power"</v>
                          <o n="Instance" t="Operand">
                            <v n="Operand">"mcPower"</v>
                            <v n="Type">"MC_Power"</v>
                            <v n="Comment">""</v>
                            <v n="SymbolComment">""</v>
                            <v n="Address">""</v>
                            <o n="Flags" t="Flags">
                              <v n="Flags">0</v>
                              <v n="Fixed">false</v>
                              <v n="Extensible">false</v>
                            </o>
                            <v n="LValue">false</v>
                            <v n="Boolean">false</v>
                            <v n="IsInstance">true</v>
                            <v n="Id">2L</v>
                          </o>
                          <o n="OutputItems" t="OutputItemList">
                            <l2 n="OutputItems" cet="Operand">
                              <n />
                              <o>
                                <v n="Operand">""</v>
                                <v n="Type">"BOOL"</v>
                                <v n="Comment">""</v>
                                <v n="SymbolComment">""</v>
                                <v n="Address">""</v>
                                <o n="Flags" t="Flags">
                                  <v n="Flags">0</v>
                                  <v n="Fixed">false</v>
                                  <v n="Extensible">false</v>
                                </o>
                                <v n="LValue">true</v>
                                <v n="Boolean">false</v>
                                <v n="IsInstance">false</v>
                                <v n="Id">4L</v>
                              </o>
                              <o>
                                <v n="Operand">""</v>
                                <v n="Type">"BOOL"</v>
                                <v n="Comment">""</v>
                                <v n="SymbolComment">""</v>
                                <v n="Address">""</v>
                                <o n="Flags" t="Flags">
                                  <v n="Flags">0</v>
                                  <v n="Fixed">false</v>
                                  <v n="Extensible">false</v>
                                </o>
                                <v n="LValue">true</v>
                                <v n="Boolean">false</v>
                                <v n="IsInstance">false</v>
                                <v n="Id">5L</v>
                              </o>
                              <o>
                                <v n="Operand">""</v>
                                <v n="Type">"BOOL"</v>
                                <v n="Comment">""</v>
                                <v n="SymbolComment">""</v>
                                <v n="Address">""</v>
                                <o n="Flags" t="Flags">
                                  <v n="Flags">0</v>
                                  <v n="Fixed">false</v>
                                  <v n="Extensible">false</v>
                                </o>
                                <v n="LValue">true</v>
                                <v n="Boolean">false</v>
                                <v n="IsInstance">false</v>
                                <v n="Id">6L</v>
                              </o>
                              <o>
                                <v n="Operand">""</v>
                                <v n="Type">"UDINT"</v>
                                <v n="Comment">""</v>
                                <v n="SymbolComment">""</v>
                                <v n="Address">""</v>
                                <o n="Flags" t="Flags">
                                  <v n="Flags">0</v>
                                  <v n="Fixed">false</v>
                                  <v n="Extensible">false</v>
                                </o>
                                <v n="LValue">true</v>
                                <v n="Boolean">false</v>
                                <v n="IsInstance">false</v>
                                <v n="Id">7L</v>
                              </o>
                            </l2>
                          </o>
                          <o n="Flags" t="Flags">
                            <v n="Flags">0</v>
                            <v n="Fixed">false</v>
                            <v n="Extensible">false</v>
                          </o>
                          <n n="InputFlags" />
                          <l2 n="InputItems" cet="BoxTreeOperand">
                            <o>
                              <o n="Operand" t="Operand">
                                <v n="Operand">"iq_Axis.stAxis"</v>
                                <v n="Type">"AXIS_REF"</v>
                                <v n="Comment">""</v>
                                <v n="SymbolComment">" Axis motor "</v>
                                <v n="Address">""</v>
                                <o n="Flags" t="Flags">
                                  <v n="Flags">0</v>
                                  <v n="Fixed">false</v>
                                  <v n="Extensible">false</v>
                                </o>
                                <v n="LValue">false</v>
                                <v n="Boolean">false</v>
                                <v n="IsInstance">false</v>
                                <v n="Id">9L</v>
                              </o>
                              <v n="Id">8L</v>
                            </o>
                            <o>
                              <o n="Operand" t="Operand">
                                <v n="Operand">""</v>
                                <v n="Type">"BOOL"</v>
                                <v n="Comment">""</v>
                                <v n="SymbolComment">""</v>
                                <v n="Address">""</v>
                                <o n="Flags" t="Flags">
                                  <v n="Flags">0</v>
                                  <v n="Fixed">false</v>
                                  <v n="Extensible">false</v>
                                </o>
                                <v n="LValue">false</v>
                                <v n="Boolean">false</v>
                                <v n="IsInstance">false</v>
                                <v n="Id">11L</v>
                              </o>
                              <v n="Id">10L</v>
                            </o>
                            <o>
                              <o n="Operand" t="Operand">
                                <v n="Operand">"iq_Axis.xHiLS"</v>
                                <v n="Type">"BOOL"</v>
                                <v n="Comment">""</v>
                                <v n="SymbolComment">""</v>
                                <v n="Address">"%I*"</v>
                                <o n="Flags" t="Flags">
                                  <v n="Flags">0</v>
                                  <v n="Fixed">false</v>
                                  <v n="Extensible">false</v>
                                </o>
                                <v n="LValue">false</v>
                                <v n="Boolean">false</v>
                                <v n="IsInstance">false</v>
                                <v n="Id">13L</v>
                              </o>
                              <v n="Id">12L</v>
                            </o>
                            <o>
                              <o n="Operand" t="Operand">
                                <v n="Operand">"iq_Axis.xLoLS"</v>
                                <v n="Type">"BOOL"</v>
                                <v n="Comment">""</v>
                                <v n="SymbolComment">""</v>
                                <v n="Address">"%I*"</v>
                                <o n="Flags" t="Flags">
                                  <v n="Flags">0</v>
                                  <v n="Fixed">false</v>
                                  <v n="Extensible">false</v>
                                </o>
                                <v n="LValue">false</v>
                                <v n="Boolean">false</v>
                                <v n="IsInstance">false</v>
                                <v n="Id">15L</v>
                              </o>
                              <v n="Id">14L</v>
                            </o>
                            <o>
                              <o n="Operand" t="Operand">
                                <v n="Operand">""</v>
                                <v n="Type">"LREAL"</v>
                                <v n="Comment">""</v>
                                <v n="SymbolComment">""</v>
                                <v n="Address">""</v>
                                <o n="Flags" t="Flags">
                                  <v n="Flags">0</v>
                                  <v n="Fixed">false</v>
                                  <v n="Extensible">false</v>
                                </o>
                                <v n="LValue">false</v>
                                <v n="Boolean">false</v>
                                <v n="IsInstance">false</v>
                                <v n="Id">17L</v>
                              </o>
                              <v n="Id">16L</v>
                            </o>
                            <o>
                              <o n="Operand" t="Operand">
                                <v n="Operand">"MC_Aborting"</v>
                                <v n="Type">"MC_BUFFERMODE"</v>
                                <v n="Comment">""</v>
                                <v n="SymbolComment">""</v>
                                <v n="Address">""</v>
                                <o n="Flags" t="Flags">
                                  <v n="Flags">0</v>
                                  <v n="Fixed">false</v>
                                  <v n="Extensible">false</v>
                                </o>
                                <v n="LValue">false</v>
                                <v n="Boolean">false</v>
                                <v n="IsInstance">false</v>
                                <v n="Id">19L</v>
                              </o>
                              <v n="Id">18L</v>
                            </o>
                            <o>
                              <o n="Operand" t="Operand">
                                <v n="Operand">""</v>
                                <v n="Type">"ST_PowerOptions"</v>
                                <v n="Comment">""</v>
                                <v n="SymbolComment">""</v>
                                <v n="Address">""</v>
                                <o n="Flags" t="Flags">
                                  <v n="Flags">0</v>
                                  <v n="Fixed">false</v>
                                  <v n="Extensible">false</v>
                                </o>
                                <v n="LValue">false</v>
                                <v n="Boolean">false</v>
                                <v n="IsInstance">false</v>
                                <v n="Id">21L</v>
                              </o>
                              <v n="Id">20L</v>
                            </o>
                          </l2>
                          <o n="InputParam" t="ParamList">
                            <l2 n="Names" cet="String">
                              <v>Axis</v>
                              <v>Enable</v>
                              <v>Enable_Positive</v>
                              <v>Enable_Negative</v>
                              <v>Override</v>
                              <v>BufferMode</v>
                              <v>Options</v>
                            </l2>
                            <l2 n="Types" cet="String">
                              <v>AXIS_REF[REF]</v>
                              <v>BOOL</v>
                              <v>BOOL</v>
                              <v>BOOL</v>
                              <v>LREAL</v>
                              <v>MC_BufferMode</v>
                              <v>ST_PowerOptions</v>
                            </l2>
                          </o>
                          <o n="OutputParam" t="ParamList">
                            <l2 n="Names" cet="String">
                              <v>Status</v>
                              <v>Busy</v>
                              <v>Active</v>
                              <v>Error</v>
                              <v>ErrorID</v>
                            </l2>
                            <l2 n="Types" cet="String">
                              <v>BOOL</v>
                              <v>BOOL</v>
                              <v>BOOL</v>
                              <v>BOOL</v>
                              <v>UDINT</v>
                            </l2>
                          </o>
                          <v n="CallType" t="Operator">FunctionBlock</v>
                          <v n="EN">false</v>
                          <v n="ENO">false</v>
                          <n n="STSnippet" />
                          <v n="ContainsExtensibleInputs">false</v>
                          <v n="ProvidesSTSnippet">false</v>
                          <v n="Id">3L</v>
                        </o>
                        <v n="Id">23L</v>
                      </o>
                    </l2>
                    <l2 n="Connectors" />
                    <v n="Id">1L</v>
                  </o>
                </l2>
                <v n="BranchCounter">0</v>
                <v n="ValidIds">true</v>
              </o>
            </Data>
            <TypeList>
              <Type n="Boolean">System.Boolean</Type>
              <Type n="BoxTreeAssign">{9873c309-1f09-4ebf-9078-42d8057ef11b}</Type>
              <Type n="BoxTreeBox">{acfc6f68-8e3a-4af5-bf81-3dd512095a46}</Type>
              <Type n="BoxTreeOperand">{9de7f100-1b87-424c-a62e-45b0cfc85ed2}</Type>
              <Type n="Flags">{668066f2-6069-46b3-8962-8db8d13d7db2}</Type>
              <Type n="Int32">System.Int32</Type>
              <Type n="Int64">System.Int64</Type>
              <Type n="Network">{d9a99d73-b633-47db-b876-a752acb25871}</Type>
              <Type n="NWLImplementationObject">{25e509de-33d4-4447-93f8-c9e4ea381c8b}</Type>
              <Type n="Operand">{c9b2f165-48a2-4a45-8326-3952d8a3d708}</Type>
              <Type n="Operator">{bffb3c53-f105-4e85-aba2-e30df579d75f}</Type>
              <Type n="OutputItemList">{f40d3e09-c02c-4522-a88c-dac23558cfc4}</Type>
              <Type n="ParamList">{71496971-9e0c-4677-a832-b9583b571130}</Type>
              <Type n="String">System.String</Type>
            </TypeList>
          </XmlArchive>
        </NWL>
      </Implementation>
    </Action>
    <LineIds Name="FB_SmoothAxis">
      <LineId Id="359" Count="81" />
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_SmoothAxis.ActError">
      <LineId Id="2" Count="8" />
      <LineId Id="1" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>